kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toptal-app-ingress
spec:
  rules:
  - host: www.tt-k8scluster.cloudns.ph
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 4000

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
